Revert "mobile overflow-x fixed itself?"
This reverts commit 3db4a156f7224d92667af408e883fb9db1babe4d.

--- a/styles.css
+++ b/styles.css
@@ -402,7 +402,17 @@ header {
 
 @media screen and (max-width: 1300px) {
   html, body {
-    overflow-x: hidden;
+    overflow: hidden;
+  }
+
+  #curtain-toggle {
+    display: none;
+    pointer-events: none;
+  }
+
+  #artwork-track {
+    display: none;
+    pointer-events: none;
   }
 
   .header-left h1 {
